# thuisscraper

./: .gitignore  Dockerfile  README.md  api.py  pyproject.toml  pytest.ini
app/: main.py
app/database/: engine.py
app/database/models/: __init__.py  menu.py  restaurant.py
app/ingest/: scraper.py
app/routers/: analytics.py  scrape.py
app/schemas/: __init__.py  menu.py  restaurant.py  scrape_request.py
app/utils/: apiwrapper.py  headers.py  helper.py
tests/: test_ingest.py
